--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ env:
    - DESTINATION="OS=10.0,name=Apple TV 1080p" SDK="$TVOS_SDK" SCHEME="$TVOS_SCHEME" RUN_TESTS="NO" BUILD_EXAMPLE="NO" POD_LINT="NO"
    - DESTINATION="OS=11.0,name=Apple TV 4K"    SDK="$TVOS_SDK" SCHEME="$TVOS_SCHEME" RUN_TESTS="NO" BUILD_EXAMPLE="NO" POD_LINT="NO"
 
+before_install:
+   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+  
 script:
 - set -o pipefail
 - xcodebuild -version -sdk
